# FactoryDaemon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bot  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  lint-and-test.yml
src/factorydaemon/: __init__.py  cli.py  config.py
src/factorydaemon/bot/: __init__.py  telegram.py
src/factorydaemon/planner/: __init__.py  engine.py  excel.py  file_type.py  normalizer.py  orchestrator.py  parser.py  session.py  validator.py
src/factorydaemon/services/: llm.py
src/factorydaemon/storage/: norms.py
tests/: conftest.py
tests/unit/: test_imports.py  test_placeholder.py
tests/unit/bot/: test_telegram.py
tests/unit/planner/: test_engine.py  test_excel.py  test_file_type.py  test_normalizer.py  test_orchestrator.py  test_parser.py  test_session.py  test_validator.py
tests/unit/services/: test_llm.py
